--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@lighthouse-web3/sdk": "^0.3.7",
+    "@nextui-org/react": "^2.4.8",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.9.0",
     "howler": "^2.2.4",
+    "lottie-web": "^5.12.2",
     "next": "14.2.12",
     "okto-sdk-react": "^0.1.2",
     "pinata": "^1.4.1",
